--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -90,7 +90,7 @@
 		"FAST_EASY": "Rapide et Facile",
 		"GET_STARTED": "Commencez",
 		"SECURITY": "Sécurité",
-		"TEXT_1": "Nous fournissons tous les outils dont vous avez besoin pour gérer vos jetons ARK, à tout moment, partout dans le monde !",
+		"TEXT_1": "Nous fournissons tous les outils dont vous avez besoin pour gérer vos jetons LABELSCOIN, à tout moment, partout dans le monde !",
 		"TEXT_2": "Toutes vos données sensibles sont stockées en toute sécurité en utilisant l'algorithme PBKDF2 et le cryptage AES-256 protégé par votre code PIN",
 		"TEXT_3": "Balayez l'écran entre les profils et les portefeuilles, vérifiez vos soldes, envoyer et recevoir des fonds et bien plus encore",
 		"WELCOME": "Bienvenue"
