--- a/src/assets/i18n/gr.json
+++ b/src/assets/i18n/gr.json
@@ -57,7 +57,7 @@
 		"FAST_EASY": "Γρήγορα και εύκολα",
 		"GET_STARTED": "Αρχίζουμε",
 		"SECURITY": "Ασφάλεια",
-		"TEXT_1": "Παρέχουμε όλα τα εργαλεία που χρειάζεστε για τη διαχείριση των νομισμάτων ARK οποιαδήποτε στιγμή και οπουδήποτε στον κόσμο!",
+		"TEXT_1": "Παρέχουμε όλα τα εργαλεία που χρειάζεστε για τη διαχείριση των νομισμάτων LABELSCOIN οποιαδήποτε στιγμή και οπουδήποτε στον κόσμο!",
 		"TEXT_2": "Όλα τα ευαίσθητα δεδομένα αποθηκεύονται με ασφάλεια χρησιμοποιώντας τον αλγόριθμο PBKDF2 και την κρυπτογράφηση AES-256 και προστατεύονται από τον κωδικό σας PIN",
 		"TEXT_3": "Μετακινηθείτε μεταξύ διαφορετικών προφίλ και χαρτοφυλακίων, ελέγξτε τα υπόλοιπα σας, στείλτε και λάβετε χρήματα και πολλά άλλα",
 		"WELCOME": "Καλώς ήρθατε!"
