--- a/src/assets/i18n/id.json
+++ b/src/assets/i18n/id.json
@@ -94,7 +94,7 @@
 		"FAST_EASY": "Cepat dan Mudah",
 		"GET_STARTED": "Segera Mulai",
 		"SECURITY": "Keamanan",
-		"TEXT_1": "Kami menyediakan semua alat yang Anda butuhkan untuk mengelola token ARK Anda, kapan saja, di mana saja, di seluruh dunia!",
+		"TEXT_1": "Kami menyediakan semua alat yang Anda butuhkan untuk mengelola token LABELSCOIN Anda, kapan saja, di mana saja, di seluruh dunia!",
 		"TEXT_2": "Semua data sensitif Anda disimpan dengan aman menggunakan algoritma PBKDF2 dan enkripsi AES-256 yang dilindungi oleh Kode PIN Anda",
 		"TEXT_3": "Geser antara profil dan dompet, periksa saldo Anda, kirim dan terima dana dan banyak lagi",
 		"WELCOME": "Selamat Bergabung"
