--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -94,7 +94,7 @@
 		"FAST_EASY": "Szybki i prosty",
 		"GET_STARTED": "Zacznij",
 		"SECURITY": "Bezpieczeństwo",
-		"TEXT_1": "Dostarczamy narzędzia do zarządzania Twoimi tokenami ARK, 24/7, na całym świecie!",
+		"TEXT_1": "Dostarczamy narzędzia do zarządzania Twoimi tokenami LABELSCOIN, 24/7, na całym świecie!",
 		"TEXT_2": "Twoje wrażliwe dane są bezpiecznie przechowywane przy pomocy algorytmów PBKDF2 oraz enkrypcji AES-256 chronione przez Twój kod PIN",
 		"TEXT_3": "Przesuwaj między profilami i portfelami, sprawdzaj swój bilans, wysyłaj i otrzymuj środki oraz wiele więcej",
 		"WELCOME": "Witamy na pokładzie"
