--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -96,7 +96,7 @@
 		"FAST_EASY": "Rápido e Fácil",
 		"GET_STARTED": "Iniciar",
 		"SECURITY": "Segurança",
-		"TEXT_1": "Nós fornecemos todas as ferramentas que você precisa para gerenciar suas ARK, a qualquer hora, em qualquer lugar, em todo o mundo!",
+		"TEXT_1": "Nós fornecemos todas as ferramentas que você precisa para gerenciar suas LABELSCOIN, a qualquer hora, em qualquer lugar, em todo o mundo!",
 		"TEXT_2": "Todos os seus dados confidenciais são armazenados de forma segura usando o algoritmo PBKDF2 e a criptografia AES-256 protegida pelo seu código PIN",
 		"TEXT_3": "Deslize entre perfis e carteiras, verifique seus saldos, envie e receba fundos e muito mais",
 		"WELCOME": "Bem vindo a bordo"
