--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -95,7 +95,7 @@
 		"FAST_EASY": "快速便捷",
 		"GET_STARTED": "开始",
 		"SECURITY": "安全",
-		"TEXT_1": "我们提供您在全球任何时间，任何地点管理ARK硬币所需的所有工具!",
+		"TEXT_1": "我们提供您在全球任何时间，任何地点管理LABELSCOIN硬币所需的所有工具!",
 
 		"TEXT_2": "使用PBKDF2算法和受PIN码保护的AES-256加密安全地存储所有敏感数据",
 
