--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -90,7 +90,7 @@
 		"FAST_EASY": "Бързо и Лесно",
 		"GET_STARTED": "Начало",
 		"SECURITY": "Сигурност",
-		"TEXT_1": "Предоставяме Ви всички нужни инструменти за да си управлявате ARK койните, по всяко време, навсякъде в цял свят!",
+		"TEXT_1": "Ние предоставяме всички инструменти, от които се нуждаете, за да управлявате LABELSCOIN токени по всяко време, навсякъде и по целия свят!",
 		"TEXT_2": "Всички важни данни са сигурно запаметени използвайки PBKDF2 алгоритъм и AES-256 криптиране, предпазени чрез вашият ПИН код",
 		"TEXT_3": "Лесно сменяне между профилите и портфейлите, проверка на салдото, изпращане и получаване на плащания и още много",
 		"WELCOME": "Добре дошли на борда"
