--- a/src/assets/i18n/cs.json
+++ b/src/assets/i18n/cs.json
@@ -94,7 +94,7 @@
 		"FAST_EASY": "Rychlé a jednoduché",
 		"GET_STARTED": "Pojďme začít",
 		"SECURITY": "Bezpečnost",
-		"TEXT_1": "Poskytujeme všechny nástroje které potřebuješ pro práci s ARK měnou, kdykoli, kdekoli, celosvětově!",
+		"TEXT_1": "Poskytujeme všechny nástroje které potřebuješ pro práci s LABELSCOIN měnou, kdykoli, kdekoli, celosvětově!",
 		"TEXT_2": "Všechny tvá citlivá data jsou bezpečně uložena za použití PBKDF2 algoritmu a AES-256 kódování, chráněna tvým PIN kódem",
 		"TEXT_3": "Prohazovat profily a peněženky, kontrolovat zůstatky, posílat a přijímat měnu ale i daleko víc",
 		"WELCOME": "Vítej na palubě"
