--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -109,7 +109,7 @@
 		"FAST_EASY": "Fast and Easy",
 		"GET_STARTED": "Get Started",
 		"SECURITY": "Security",
-		"TEXT_1": "We provide all the tools you need to manage your ARK tokens, anytime, anywhere, worldwide!",
+		"TEXT_1": "We provide all the tools you need to manage your LABELSCOIN tokens, anytime, anywhere, worldwide!",
 		"TEXT_2": "All your sensitive data is securely stored using PBKDF2 algorithm and AES-256 encryption protected by your PIN Code",
 		"TEXT_3": "Swipe between profiles and wallets, check your balances, send and receive funds and much more",
 		"WELCOME": "Welcome Aboard"
@@ -118,9 +118,9 @@
 		"DELETE_INSTRUCTIONS": "In order to delete the recipient, make swipe left"
 	},
 	"SIGN_IN_PAGE": {
-		"ARK_WALLET": "ARK Wallet",
+		"ARK_WALLET": "Labelscoin Wallet",
 		"CREATE_PROFILE": "Create a profile",
-		"SLOGAN": "Welcome to the LABESCOIN"
+		"SLOGAN": "Welcome to the LABELSCOIN"
 	},
 	"SIGN_OUT_PROFILE_TEXT": "Sign out of Profile?",
 	"MARKETS_PAGE": {
