--- a/src/assets/i18n/kor.json
+++ b/src/assets/i18n/kor.json
@@ -90,7 +90,7 @@
 		"FAST_EASY": "빠르고 쉽습니다",
 		"GET_STARTED": "시작하세요",
 		"SECURITY": "안전합니다",
-		"TEXT_1": "ARK 를 관리하기 위한 모든 기능을 제공할 것입니다. 언제, 어디서든!",
+		"TEXT_1": "LABELSCOIN 를 관리하기 위한 모든 기능을 제공할 것입니다. 언제, 어디서든!",
 		"TEXT_2": "PBKDF2 알고리즘과 AES-256 암호화를 통해 모든 사용자의 데이터가 안전하게 보관됩니다.",
 		"TEXT_3": "프로필과 지갑을 통해 잔액을 확인하고, 송금 및 입금을 할 수 있습니다.",
 		"WELCOME": "환영합니다"
