--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -55,7 +55,7 @@
 		"FAST_EASY": "Быстро и легко",
 		"GET_STARTED": "Начните",
 		"SECURITY": "Безопасность",
-		"TEXT_1": "Мы предоставляем все инструменты, которые позволяют управлять АРК жетоны, в любое время, в любом месте, во всем мире!",
+		"TEXT_1": "Мы предоставляем все инструменты, которые позволяют управлять LABELSCOIN жетоны, в любое время, в любом месте, во всем мире!",
 		"TEXT_2": "Все конфиденциальные данные надежно хранятся с помощью PBKDF2 алгоритм AES-256 защищен PIN-кода",
 		"TEXT_3": "Проведите пальцем между профилями и кошельки, проверьте ваши балансы, отправлять и получать средства и многое другое.",
 		"WELCOME": "Добро пожаловать на борт"
