--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -57,7 +57,7 @@
 		"FAST_EASY": "Snabb och Enkel",
 		"GET_STARTED": "Kom igång",
 		"SECURITY": "Säkerhet",
-		"TEXT_1": "Vi förser dig med alla verktyg du behöver för att hantera dina ARK-tokens, när som helst, överallt, i hela världen!",
+		"TEXT_1": "Vi förser dig med alla verktyg du behöver för att hantera dina LABELSCOIN-tokens, när som helst, överallt, i hela världen!",
 		"TEXT_2": "All din känsliga data är säkert lagrad med PBKDF2-algoritmen och krypterad med AES-256 som beskyddas av din PIN-kod",
 		"TEXT_3": "Svep mellan profiler och plånböcker, kolla dina saldon, skicka och ta emot tillgångar och mycket mera",
 		"WELCOME": "Välkommen ombord"
